# uisuki

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  deploy.yml
src/: header.rs  main.rs
src/commands/: discord.rs  does_my_game_work.rs  game_support.rs  github.rs  heroic.rs  mod.rs  msync.rs  paths.rs  ping.rs  say.rs  steam.rs  username.rs  website.rs  whats_where.rs
src/header/: types.rs
