[package]
name = "uisuki"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.20"
semver = "1.0"
iso8601 = "0.6.1"
shuttle-serenity = "0.34.1"
shuttle-runtime = "0.34.1"
shuttle-secrets = "0.34.1"

[dependencies.serenity]
version = "0.12"